[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Enemies/light.png" type="Texture" id=1]
[ext_resource path="res://Graphics/World/Pedestal.png" type="Texture" id=2]
[ext_resource path="res://World/Pedestal.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Pedestal" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.0237888, 0.0237888 )
texture = ExtResource( 1 )
color = Color( 1, 0.905882, 0.584314, 1 )
energy = 0.0

[connection signal="mouse_entered" from="." to="." method="_on_Pedestal_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Pedestal_mouse_exited"]
